@@ -8,13 +8,12 @@ import org.jiangwen.common.lang.Result;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
-import sun.misc.BASE64Encoder;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.security.Principal;
+import java.util.Base64;
 
 @RestController
 public class AuthController extends BaseController {
@@ -36,10 +35,10 @@ public class AuthController extends BaseController {
         ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
         ImageIO.write(image, "jpg", outputStream);
 
-        BASE64Encoder encoder = new BASE64Encoder();
+        Base64.Encoder encoder = Base64.getEncoder();
         String str = "data:image/jpeg;base64,";
 
-        String base64Img = str + encoder.encode(outputStream.toByteArray());
+        String base64Img = str + encoder.encodeToString(outputStream.toByteArray());
 
         redisUtil.hset(Const.CAPTCHA_KEY, key, code, 120);
 
@@ -49,26 +48,6 @@ public class AuthController extends BaseController {
                         .put("captchaImg", base64Img)
                         .build()
 
-        );
-    }
-
-    /**
-     * 获取用户信息接口
-     *
-     * @param principal
-     * @return
-     */
-    @GetMapping("/sys/userInfo")
-    public Result userInfo(Principal principal) {
-
-        SysUser sysUser = sysUserService.getByUsername(principal.getName());
-
-        return Result.succ(MapUtil.builder()
-                .put("id", sysUser.getId())
-                .put("username", sysUser.getUsername())
-                .put("avatar", sysUser.getAvatar())
-                .put("created", sysUser.getCreated())
-                .map()
         );
     }
 
